# PhishGuardAI

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Readme.md  cls  docker-compose.yml  init_ge.py  mlflow.db  model_logs.txt  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.in  requirements.txt  test_shap_locally.py
.github/workflows/: ci.yml  data-contract.yml
configs/dev/: config.yaml  features_url_only.yaml  thresholds.json  thresholds_7feat.json  thresholds_8feat.json  whitelist.json
docker/: compose.yml  feature.Dockerfile  gateway.Dockerfile  model.Dockerfile
docs/: DEMO_SCRIPT.md  DOCUMENTATION_SUMMARY.md  EDA_INVESTIGATION.md  EXPLAINABILITY.md  FEATURE_EXTRACTION.md  MODELING.md  MODEL_CARD.md  Phishing_Detection_Model_Report.md  model_docs.md
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  phiusiil_8feature_production.json  phiusiil_minimal.json
gx/uncommitted/: config_variables.yml
mlruns/873624361181467123/: meta.yaml
models/dev/: model_7feat_meta.json  model_8feat.pkl  model_8feat_meta.json  model_meta.json
notebooks/: 00_eda.ipynb  01_baseline_and_calibration.ipynb  01_feature_engineering.ipynb  02_ablation_url_only.ipynb  03_ablation_url_only copy.ipynb  03_ablation_url_only.ipynb  03_prod_valid.ipynb  feature_engineering.ipynb
notebooks/archive/: 02_baseline_and_calibration.ipynb  03_ablation_url_only.ipynb  04_robustness_checks.ipynb
outputs/: benchmark_results.txt  feature_manifest_resolved.json  url_features_fingerprint.json
outputs/eda/: eda_summary.json  feature_correlations.csv  feature_separation_scores.csv  summary.md
outputs/robustness/: single_feature_ap.csv
scripts/: benchmark.py  ge_build_phiusiil_suite.py  ge_check.py  materialize_url_features.py  smoke_judge_selector.py
src/common/: audit.py  feature_extraction.py  stats.py  thresholds.py
src/feature_svc/: __init__.py  main.py
src/gateway/: __init__.py  judge_wire.py  main.py
tests/: test_audit.py  test_enhanced_routing.py  test_gateway_e2e.py  test_gateway_imports.py  test_gateway_input_validation.py  test_gateway_judge_wire.py  test_gateway_model_integration.py  test_judge_llm_adapter.py  test_model_svc.py  test_threshold_decisions.py
(+37 files in other folders)
