# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard"                         # choose a stable package name
version = "0.1.0"
description = "URL phishing detection with URL-only baseline + LLM judge"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.24.0,<2.0",
  "pandas>=2.0.0,<2.3",
  "scikit-learn>=1.3.0,<1.6",
  "xgboost>=1.7.0,<3.0",
  "fastapi>=0.100.0,<0.120",
  "uvicorn[standard]>=0.23.0,<0.35",
  "pymongo>=4.0.0,<5.0",
  "mlflow>=2.10.0,<2.20",
  "great-expectations>=0.18.0,<1.0",
  "pydantic>=2.0.0,<3.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9.0",
  "pytest-cov>=4.0,<6.0",
  "black>=23.0,<25.0",
  "isort>=5.12,<6.0",
  "mypy>=1.0,<2.0",
  "flake8>=6.0,<8.0",
  "bandit>=1.7,<2.0",
  "pre-commit>=3.0,<4.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

# ---- test & tooling configs (keeps your current settings)
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]             # so tests can import packages under src

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = "venv|.venv|data|mlruns|docker|great_expectations/uncommitted"
