# pyproject.toml
[project]
name = "phishguard"
version = "0.2.0"
description = "PhishGuard AI - URL phishing detection system"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "scikit-learn",
    "xgboost",
    "numpy",
    "pandas",
    "joblib",
    "pyyaml",
    "tldextract",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = "venv|.venv|data|mlruns|docker|great_expectations/uncommitted"
